[package]
name = "smded"
description = "The Super Metroid Disassembly Editor"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bitflags = "2.10.0"
blocking = "1.6.2"
bytemuck = { version = "1.24.0", features = ["min_const_generics", "extern_crate_alloc", "derive"] }
eframe = "0.33.3"
egui = "0.33.3"
egui_extras = "0.33.3"
heck = "0.5.0"
quick-xml = { version = "0.39.0", features = ["serialize", "serde-types"] }
rfd = "0.17.2"
serde = { version = "1.0.228", features = ["derive"] }
slotmap = "1.1.1"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
